--- a/TokenEx.InterviewProject/Views/Shared/_Layout.cshtml
+++ b/TokenEx.InterviewProject/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
     <script src="https://test-htp.tokenex.com/Iframe/Iframe-v3.min.js"></script>
     <style>
